// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hint renders RTL styling 1`] = `
<div
  className="Hint-gklniA c-chk__hint c-chk__hint--toggle is-rtl nhFXS"
  data-garden-id="toggles.hint"
  data-garden-version="version"
/>
`;

exports[`Hint renders default styling 1`] = `
<div
  className="Hint-gklniA c-chk__hint c-chk__hint--toggle nhFXS"
  data-garden-id="toggles.hint"
  data-garden-version="version"
/>
`;
